Extending left handle of a VSE multicam effect strip with snap creates frame stills #46678

Closed
opened 2015-11-02 18:33:01 +01:00 by David Salvo · 10 comments

System Information
Mint 17.2, NVIDIA G92 [GeForce 9800 GT]

Blender Version
Broken: (example: 2.76, 1st release)
Worked: (broken for a while)

Short description of error
Extending left handle of a multicam effect strip with snap creates frame stills

Exact steps for others to reproduce the error

  • Add video to VSE timeline
  • Add multicam strip above video
  • Select LEFT multicam strip handle with right mouse button
  • Select any frame to the left of this handle
  • Snap selected handle to selected frame with SHIFT-S
  • Newly extended frames will display frame stills instead of video
  • NOTE: The still segment remains relative to the strip even as it is moved around. However, as soon as this handle is extended with either right mouse button or G for grab by even one frame, the strip will correct itself and play underlying video again.
**System Information** Mint 17.2, NVIDIA G92 [GeForce 9800 GT] **Blender Version** Broken: (example: 2.76, 1st release) Worked: (broken for a while) **Short description of error** Extending left handle of a multicam effect strip with snap creates frame stills **Exact steps for others to reproduce the error** - Add video to VSE timeline - Add multicam strip above video - Select LEFT multicam strip handle with right mouse button - Select any frame to the left of this handle - Snap selected handle to selected frame with SHIFT-S - Newly extended frames will display frame stills instead of video - NOTE: The still segment remains relative to the strip even as it is moved around. However, as soon as this handle is extended with either right mouse button or G for grab by even one frame, the strip will correct itself and play underlying video again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie

Added subscriber: @Sergey

Added subscriber: @Sergey

Does the "Refresh Sequencer" button helps here? For me it shows black frames as it's actually expected.

Also, always attach the .blend file which demonstrates the issue.

Does the "Refresh Sequencer" button helps here? For me it shows black frames as it's actually expected. Also, always attach the .blend file which demonstrates the issue.
Author

This comment was removed by @slinkeepie

*This comment was removed by @slinkeepie*
Author

Hi Sergey,

Annoying I can't edit original description to make it a big clearer...

In your case what you tried should still bug out... one step I forgot to add was to make sure the multi-cam strip is set to source channel 1 (or whichever channel the video, or in the case of the test blend, colour strip, is on)

multicam-bug.blend

Hi Sergey, Annoying I can't edit original description to make it a big clearer... In your case what you tried should still bug out... one step I forgot to add was to make sure the multi-cam strip is set to source channel 1 (or whichever channel the video, or in the case of the test blend, colour strip, is on) [multicam-bug.blend](https://archive.blender.org/developer/F253687/multicam-bug.blend)

Added subscribers: @Psy-Fi, @mont29

Added subscribers: @Psy-Fi, @mont29

OK, can confirm easily the issue with given file.

Problem comes from those new adjustment/multicam effect strips, they need a different caching management since (unlike pretty much any other movable strip), any editing, including full strip moving, should invalidate the whole cached data of it (both preprocess and final caches).

And to make things even more confusing, the start/startstill/startoffset/etc. also need extra care for those strips, calling BKE_sequence_single_fix() was missing in a few places, including snap operator (basically, there should never be any start/end still frames here…).

Attached patch (D1625) seems to fix things and work OK, but wouldn’t mind a second eye from @Sergey or @Psy-Fi here! Also, note that until you actually snap or move left or right handle of existing strips of that type, they can remain in 'invalid startstill state' (as in your demo file, where multicam strip has 15 start still frames), not sure it’s worth adding something in loader to fix this?

OK, can confirm easily the issue with given file. Problem comes from those new adjustment/multicam effect strips, they need a different caching management since (unlike pretty much any other movable strip), any editing, including full strip moving, should invalidate the whole cached data of it (both preprocess and final caches). And to make things even more confusing, the `start`/`startstill`/`startoffset`/etc. also need extra care for those strips, calling `BKE_sequence_single_fix()` was missing in a few places, including snap operator (basically, there should **never** be any start/end still frames here…). Attached patch ([D1625](https://archive.blender.org/developer/D1625)) seems to fix things and work OK, but wouldn’t mind a second eye from @Sergey or @Psy-Fi here! Also, note that until you actually snap or move left or right handle of existing strips of that type, they can remain in 'invalid startstill state' (as in your demo file, where multicam strip has 15 start still frames), not sure it’s worth adding something in loader to fix this?

This issue was referenced by 307f1e7d23

This issue was referenced by 307f1e7d2360de19d38a6b4c2e2b4323f505cf18

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46678
No description provided.