Fix T46678: Extending left handle of a VSE multicam effect strip with snap creates frame stills.

Also fixes cache handling for those strips, they need more radical flushing...