source/blender/editors/space_sequencer/sequencer_edit.c
@@ -1206,6 +1206,7 @@ static int sequencer_snap_exec(bContext *C, wmOperator *op)
 					BKE_sequence_tx_set_final_right(seq, snap_frame);
 				}
 				BKE_sequence_tx_handle_xlimits(seq, seq->flag & SEQ_LEFTSEL, seq->flag & SEQ_RIGHTSEL);
+				BKE_sequence_single_fix(seq);
 			}
 			BKE_sequence_calc(scene, seq);
 		}
@@ -2516,6 +2517,7 @@ static int sequencer_meta_toggle_exec(bContext *C, wmOperator *UNUSED(op))
 #if 1
 		BKE_sequence_tx_set_final_left(ms->parseq, ms->disp_range[0]);
 		BKE_sequence_tx_set_final_right(ms->parseq, ms->disp_range[1]);
+		BKE_sequence_single_fix(seq);
 		BKE_sequence_calc(scene, ms->parseq);
 #else
 		if (BKE_sequence_test_overlap(ed->seqbasep, ms->parseq))
